@@ -1,54 +1,71 @@
 package com.mygitgor.analysis;
 
 import com.mygitgor.model.EnhancedSpeechAnalysis;
+import com.mygitgor.utils.ThreadPoolManager;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
 import java.util.*;
+import java.util.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.stream.Collectors;
 
 public class RecommendationEngine {
     private static final Logger logger = LoggerFactory.getLogger(RecommendationEngine.class);
 
-    // База знаний рекомендаций
+    private static final int MAX_RECOMMENDATIONS_DEFAULT = 5;
+    private static final int MAX_RECOMMENDATIONS_LOW_SCORE = 7;
+    private static final int MAX_RECOMMENDATIONS_HIGH_SCORE = 3;
+    private static final float WEAK_PHONEME_THRESHOLD = 70.0f;
+    private static final float PHONEME_ATTENTION_THRESHOLD = 80.0f;
+    private static final float LOW_SCORE_THRESHOLD = 60.0f;
+    private static final float MEDIUM_SCORE_THRESHOLD = 75.0f;
+    private static final float HIGH_SCORE_THRESHOLD = 85.0f;
+    private static final float EXCELLENT_SCORE_THRESHOLD = 90.0f;
+    private static final int ANALYSIS_TIMEOUT_SECONDS = 10;
+
     private final Map<String, List<RecommendationRule>> recommendationRules;
     private final Map<String, String> pronunciationTips;
     private final Map<String, List<String>> exerciseDatabase;
 
+    private final AtomicBoolean isInitialized = new AtomicBoolean(true);
+    private final AtomicReference<CompletableFuture<?>> currentOperation = new AtomicReference<>(null);
+
+    private final ThreadPoolManager threadPoolManager;
+    private final ExecutorService backgroundExecutor;
+
     public RecommendationEngine() {
+        this.threadPoolManager = ThreadPoolManager.getInstance();
+        this.backgroundExecutor = threadPoolManager.getBackgroundExecutor();
+
         this.recommendationRules = initializeRecommendationRules();
         this.pronunciationTips = initializePronunciationTips();
         this.exerciseDatabase = initializeExerciseDatabase();
+
         logger.info("Инициализирован движок рекомендаций");
     }
 
-    /**
-     * Генерация персонализированных рекомендаций на основе анализа
-     */
     public List<PersonalizedRecommendation> generateRecommendations(EnhancedSpeechAnalysis analysis) {
+        if (analysis == null) {
+            logger.warn("Получен null анализ при генерации рекомендаций");
+            return Collections.singletonList(createFallbackRecommendation());
+        }
+
         List<PersonalizedRecommendation> recommendations = new ArrayList<>();
 
         try {
             logger.info("Генерация рекомендаций на основе анализа речи");
 
-            // 1. Рекомендации по произношению
             recommendations.addAll(generatePronunciationRecommendations(analysis));
-
-            // 2. Рекомендации по беглости
             recommendations.addAll(generateFluencyRecommendations(analysis));
-
-            // 3. Рекомендации по интонации
             recommendations.addAll(generateIntonationRecommendations(analysis));
-
-            // 4. Рекомендации по громкости и четкости
             recommendations.addAll(generateVolumeClarityRecommendations(analysis));
-
-            // 5. Рекомендации на основе фонем
             recommendations.addAll(generatePhonemeBasedRecommendations(analysis));
-
-            // 6. Общие рекомендации
             recommendations.addAll(generateGeneralRecommendations(analysis));
 
-            // 7. Приоритизация рекомендаций
             recommendations = prioritizeRecommendations(recommendations, analysis);
 
             logger.info("Сгенерировано {} рекомендаций", recommendations.size());
@@ -61,268 +78,360 @@ public class RecommendationEngine {
         return recommendations;
     }
 
-    /**
-     * Генерация рекомендаций по произношению
-     */
+    public CompletableFuture<List<PersonalizedRecommendation>> generateRecommendationsAsync(EnhancedSpeechAnalysis analysis) {
+        CompletableFuture<List<PersonalizedRecommendation>> future = CompletableFuture.supplyAsync(
+                () -> generateRecommendations(analysis), backgroundExecutor);
+
+        currentOperation.set(future);
+
+        // Таймаут на случай зависания
+        threadPoolManager.getScheduledExecutor().schedule(() -> {
+            if (!future.isDone()) {
+                future.cancel(true);
+                logger.warn("Таймаут генерации рекомендаций");
+            }
+        }, ANALYSIS_TIMEOUT_SECONDS, TimeUnit.SECONDS);
+
+        return future;
+    }
+
+    public WeeklyLearningPlan generateWeeklyPlan(EnhancedSpeechAnalysis analysis) {
+        if (analysis == null) {
+            logger.warn("Получен null анализ при генерации плана");
+            return createEmptyPlan();
+        }
+
+        WeeklyLearningPlan plan = new WeeklyLearningPlan();
+        plan.setTargetLevel(analysis.getProficiencyLevel());
+        plan.setExpectedImprovement(calculateExpectedImprovement(analysis));
+
+        List<DailySchedule> schedule = createWeeklySchedule(analysis);
+        plan.setSchedule(schedule);
+        plan.setWeeklyGoal(formatWeeklyGoal(plan.getExpectedImprovement()));
+
+        logger.info("Сгенерирован недельный план обучения");
+        return plan;
+    }
+
+    public CompletableFuture<WeeklyLearningPlan> generateWeeklyPlanAsync(EnhancedSpeechAnalysis analysis) {
+        return CompletableFuture.supplyAsync(() -> generateWeeklyPlan(analysis), backgroundExecutor);
+    }
+
     private List<PersonalizedRecommendation> generatePronunciationRecommendations(EnhancedSpeechAnalysis analysis) {
         List<PersonalizedRecommendation> recommendations = new ArrayList<>();
         float pronunciationScore = (float) analysis.getPronunciationScore();
 
-        if (pronunciationScore < 60) {
-            recommendations.add(new PersonalizedRecommendation(
-                    "pronunciation_critical",
-                    "Критическое улучшение произношения",
-                    "Ваше произношение нуждается в серьезной работе. Основные проблемы: " +
-                            String.join(", ", analysis.getDetectedErrors()),
-                    "Высокий",
-                    generatePronunciationExercises(analysis, 3),
-                    90
-            ));
-        } else if (pronunciationScore < 75) {
-            recommendations.add(new PersonalizedRecommendation(
-                    "pronunciation_improve",
-                    "Улучшение произношения",
-                    "Есть несколько звуков, которые нужно отработать. Обратите внимание на четкость артикуляции.",
-                    "Средний",
-                    generatePronunciationExercises(analysis, 2),
-                    75
-            ));
-        } else if (pronunciationScore < 85) {
-            recommendations.add(new PersonalizedRecommendation(
-                    "pronunciation_refine",
-                    "Оттачивание произношения",
-                    "Произношение хорошее, но можно сделать его еще лучше. Работайте над нюансами.",
-                    "Низкий",
-                    generatePronunciationExercises(analysis, 1),
-                    60
-            ));
+        if (pronunciationScore < LOW_SCORE_THRESHOLD) {
+            recommendations.add(createPronunciationCriticalRecommendation(analysis));
+        } else if (pronunciationScore < MEDIUM_SCORE_THRESHOLD) {
+            recommendations.add(createPronunciationImproveRecommendation(analysis));
+        } else if (pronunciationScore < HIGH_SCORE_THRESHOLD) {
+            recommendations.add(createPronunciationRefineRecommendation(analysis));
         }
 
-        // Специфические рекомендации на основе фонем
-        if (!analysis.getPhonemeScores().isEmpty()) {
-            List<Map.Entry<String, Float>> weakPhonemes = analysis.getPhonemeScores().entrySet().stream()
-                    .filter(e -> e.getValue() < 70)
-                    .sorted(Comparator.comparing(Map.Entry::getValue))
-                    .toList();
-
-            if (!weakPhonemes.isEmpty()) {
-                String weakestPhoneme = weakPhonemes.get(0).getKey();
-                recommendations.add(new PersonalizedRecommendation(
-                        "phoneme_" + weakestPhoneme,
-                        "Работа над звуком /" + weakestPhoneme + "/",
-                        "Этот звук вызывает наибольшие трудности. " + pronunciationTips.getOrDefault(weakestPhoneme,
-                                "Практикуйте этот звук отдельно."),
-                        "Высокий",
-                        generatePhonemeExercises(weakestPhoneme),
-                        85
-                ));
-            }
-        }
+        recommendations.addAll(generatePhonemeSpecificRecommendations(analysis));
 
         return recommendations;
     }
 
-    /**
-     * Генерация рекомендаций по беглости
-     */
+    private PersonalizedRecommendation createPronunciationCriticalRecommendation(EnhancedSpeechAnalysis analysis) {
+        return new PersonalizedRecommendation(
+                "pronunciation_critical",
+                "🔴 Критическое улучшение произношения",
+                formatCriticalDescription(analysis),
+                "Высокий",
+                generatePronunciationExercises(analysis, 3),
+                90.0f
+        );
+    }
+
+    private String formatCriticalDescription(EnhancedSpeechAnalysis analysis) {
+        return "Ваше произношение нуждается в серьезной работе. Основные проблемы: " +
+                (analysis.getDetectedErrors().isEmpty()
+                        ? "недостаточная четкость речи"
+                        : String.join(", ", analysis.getDetectedErrors()));
+    }
+
+    private PersonalizedRecommendation createPronunciationImproveRecommendation(EnhancedSpeechAnalysis analysis) {
+        return new PersonalizedRecommendation(
+                "pronunciation_improve",
+                "🟡 Улучшение произношения",
+                "Есть несколько звуков, которые нужно отработать. Обратите внимание на четкость артикуляции.",
+                "Средний",
+                generatePronunciationExercises(analysis, 2),
+                75.0f
+        );
+    }
+
+    private PersonalizedRecommendation createPronunciationRefineRecommendation(EnhancedSpeechAnalysis analysis) {
+        return new PersonalizedRecommendation(
+                "pronunciation_refine",
+                "🟢 Оттачивание произношения",
+                "Произношение хорошее, но можно сделать его еще лучше. Работайте над нюансами.",
+                "Низкий",
+                generatePronunciationExercises(analysis, 1),
+                60.0f
+        );
+    }
+
+    private List<PersonalizedRecommendation> generatePhonemeSpecificRecommendations(EnhancedSpeechAnalysis analysis) {
+        List<PersonalizedRecommendation> recommendations = new ArrayList<>();
+
+        if (analysis.getPhonemeScores().isEmpty()) {
+            return recommendations;
+        }
+
+        analysis.getPhonemeScores().entrySet().stream()
+                .filter(e -> e.getValue() < WEAK_PHONEME_THRESHOLD)
+                .sorted(Map.Entry.comparingByValue())
+                .limit(1)
+                .findFirst()
+                .ifPresent(entry -> {
+                    String phoneme = entry.getKey();
+                    recommendations.add(new PersonalizedRecommendation(
+                            "phoneme_" + phoneme,
+                            "🔊 Работа над звуком /" + phoneme + "/",
+                            formatPhonemeDescription(phoneme, entry.getValue()),
+                            "Высокий",
+                            generatePhonemeExercises(phoneme),
+                            85.0f
+                    ));
+                });
+
+        return recommendations;
+    }
+
+    private String formatPhonemeDescription(String phoneme, Float score) {
+        return String.format("Этот звук вызывает наибольшие трудности (оценка: %.1f). %s",
+                score, pronunciationTips.getOrDefault(phoneme, "Практикуйте этот звук отдельно."));
+    }
+
     private List<PersonalizedRecommendation> generateFluencyRecommendations(EnhancedSpeechAnalysis analysis) {
         List<PersonalizedRecommendation> recommendations = new ArrayList<>();
         float fluencyScore = (float) analysis.getFluencyScore();
-        float speakingRate = analysis.getSpeakingRate();
-        int pauseCount = analysis.getPauseCount();
 
         if (fluencyScore < 65) {
-            recommendations.add(new PersonalizedRecommendation(
-                    "fluency_critical",
-                    "Критическое улучшение беглости",
-                    "Речь прерывистая, много пауз и колебаний. Нужно работать над автоматизацией речи.",
-                    "Высокий",
-                    Arrays.asList(
-                            "Практикуйте скороговорки ежедневно по 5 минут",
-                            "Читайте вслух тексты, постепенно увеличивая скорость",
-                            "Записывайте и анализируйте свою речь"
-                    ),
-                    90
-            ));
+            recommendations.add(createFluencyCriticalRecommendation());
         } else if (fluencyScore < 80) {
-            String issue = "";
-            if (speakingRate < 110) issue = "скорость речи слишком медленная";
-            else if (speakingRate > 190) issue = "скорость речи слишком быстрая";
-            else if (pauseCount > 15) issue = "слишком много пауз";
-
-            recommendations.add(new PersonalizedRecommendation(
-                    "fluency_improve",
-                    "Улучшение беглости речи",
-                    "Беглость можно улучшить. " + issue,
-                    "Средний",
-                    Arrays.asList(
-                            "Практикуйте связную речь без подготовки",
-                            "Используйте таймер для контроля скорости",
-                            "Работайте над уменьшением пауз-заполнителей ('э-э', 'мм')"
-                    ),
-                    70
-            ));
+            recommendations.add(createFluencyImproveRecommendation(analysis));
         }
 
-        // Рекомендации по паузам
-        if (pauseCount > 20) {
-            recommendations.add(new PersonalizedRecommendation(
-                    "pause_reduction",
-                    "Сокращение количества пауз",
-                    "Слишком много пауз нарушает плавность речи. Старайтесь говорить более связно.",
-                    "Средний",
-                    Arrays.asList(
-                            "Планируйте предложения перед произнесением",
-                            "Используйте связующие слова (however, therefore, moreover)",
-                            "Практикуйтесь с более короткими предложениями"
-                    ),
-                    65
-            ));
+        if (analysis.getPauseCount() > 20) {
+            recommendations.add(createPauseReductionRecommendation());
         }
 
         return recommendations;
     }
 
-    /**
-     * Генерация рекомендаций по интонации
-     */
+    private PersonalizedRecommendation createFluencyCriticalRecommendation() {
+        return new PersonalizedRecommendation(
+                "fluency_critical",
+                "⚡ Критическое улучшение беглости",
+                "Речь прерывистая, много пауз и колебаний. Нужно работать над автоматизацией речи.",
+                "Высокий",
+                Arrays.asList(
+                        "Практикуйте скороговорки ежедневно по 5 минут",
+                        "Читайте вслух тексты, постепенно увеличивая скорость",
+                        "Записывайте и анализируйте свою речь"
+                ),
+                90.0f
+        );
+    }
+
+    private PersonalizedRecommendation createFluencyImproveRecommendation(EnhancedSpeechAnalysis analysis) {
+        String issue = determineFluencyIssue(analysis);
+        return new PersonalizedRecommendation(
+                "fluency_improve",
+                "📈 Улучшение беглости речи",
+                "Беглость можно улучшить. " + issue,
+                "Средний",
+                Arrays.asList(
+                        "Практикуйте связную речь без подготовки",
+                        "Используйте таймер для контроля скорости",
+                        "Работайте над уменьшением пауз-заполнителей ('э-э', 'мм')"
+                ),
+                70.0f
+        );
+    }
+
+    private String determineFluencyIssue(EnhancedSpeechAnalysis analysis) {
+        if (analysis.getSpeakingRate() < 110) return "скорость речи слишком медленная";
+        if (analysis.getSpeakingRate() > 190) return "скорость речи слишком быстрая";
+        if (analysis.getPauseCount() > 15) return "слишком много пауз";
+        return "есть небольшие проблемы с плавностью";
+    }
+
+    private PersonalizedRecommendation createPauseReductionRecommendation() {
+        return new PersonalizedRecommendation(
+                "pause_reduction",
+                "⏸️ Сокращение количества пауз",
+                "Слишком много пауз нарушает плавность речи. Старайтесь говорить более связно.",
+                "Средний",
+                Arrays.asList(
+                        "Планируйте предложения перед произнесением",
+                        "Используйте связующие слова (however, therefore, moreover)",
+                        "Практикуйтесь с более короткими предложениями"
+                ),
+                65.0f
+        );
+    }
+
     private List<PersonalizedRecommendation> generateIntonationRecommendations(EnhancedSpeechAnalysis analysis) {
         List<PersonalizedRecommendation> recommendations = new ArrayList<>();
         float intonationScore = analysis.getIntonationScore();
 
         if (intonationScore < 70) {
-            recommendations.add(new PersonalizedRecommendation(
-                    "intonation_basic",
-                    "Освоение базовой интонации",
-                    "Интонация монотонная. Нужно научиться использовать восходящий и нисходящий тоны.",
-                    "Средний",
-                    Arrays.asList(
-                            "Слушайте и повторяйте за носителями, обращая внимание на интонацию",
-                            "Практикуйте вопросы с восходящей интонацией",
-                            "Читайте диалоги с разными эмоциональными окрасками"
-                    ),
-                    75
-            ));
+            recommendations.add(createIntonationBasicRecommendation());
         } else if (intonationScore < 85) {
-            recommendations.add(new PersonalizedRecommendation(
-                    "intonation_advanced",
-                    "Развитие продвинутой интонации",
-                    "Интонация хорошая, но можно добавить больше выразительности.",
-                    "Низкий",
-                    Arrays.asList(
-                            "Экспериментируйте с эмоциональной окраской речи",
-                            "Практикуйте разные стили речи (формальный, неформальный)",
-                            "Анализируйте интонацию в фильмах и сериалах"
-                    ),
-                    60
-            ));
+            recommendations.add(createIntonationAdvancedRecommendation());
         }
 
         return recommendations;
     }
 
-    /**
-     * Генерация рекомендаций по громкости и четкости
-     */
+    private PersonalizedRecommendation createIntonationBasicRecommendation() {
+        return new PersonalizedRecommendation(
+                "intonation_basic",
+                "🎵 Освоение базовой интонации",
+                "Интонация монотонная. Нужно научиться использовать восходящий и нисходящий тоны.",
+                "Средний",
+                Arrays.asList(
+                        "Слушайте и повторяйте за носителями, обращая внимание на интонацию",
+                        "Практикуйте вопросы с восходящей интонацией",
+                        "Читайте диалоги с разными эмоциональными окрасками"
+                ),
+                75.0f
+        );
+    }
+
+    private PersonalizedRecommendation createIntonationAdvancedRecommendation() {
+        return new PersonalizedRecommendation(
+                "intonation_advanced",
+                "🎭 Развитие продвинутой интонации",
+                "Интонация хорошая, но можно добавить больше выразительности.",
+                "Низкий",
+                Arrays.asList(
+                        "Экспериментируйте с эмоциональной окраской речи",
+                        "Практикуйте разные стили речи (формальный, неформальный)",
+                        "Анализируйте интонацию в фильмах и сериалах"
+                ),
+                60.0f
+        );
+    }
+
     private List<PersonalizedRecommendation> generateVolumeClarityRecommendations(EnhancedSpeechAnalysis analysis) {
         List<PersonalizedRecommendation> recommendations = new ArrayList<>();
-        float volumeScore = analysis.getVolumeScore();
-        float clarityScore = analysis.getClarityScore();
-        float confidenceScore = analysis.getConfidenceScore();
 
-        if (volumeScore < 70) {
-            recommendations.add(new PersonalizedRecommendation(
-                    "volume_improvement",
-                    "Улучшение громкости речи",
-                    "Речь слишком тихая. Говорите громче и увереннее.",
-                    "Средний",
-                    Arrays.asList(
-                            "Тренируйтесь говорить перед зеркалом",
-                            "Используйте диктофон для контроля громкости",
-                            "Практикуйтесь в разных помещениях"
-                    ),
-                    70
-            ));
+        if (analysis.getVolumeScore() < 70) {
+            recommendations.add(createVolumeImprovementRecommendation());
         }
 
-        if (clarityScore < 70) {
-            recommendations.add(new PersonalizedRecommendation(
-                    "clarity_improvement",
-                    "Улучшение четкости речи",
-                    "Артикуляция недостаточно четкая. Работайте над произношением окончаний.",
-                    "Средний",
-                    Arrays.asList(
-                            "Практикуйте артикуляционную гимнастику",
-                            "Четко произносите окончания слов",
-                            "Замедлите темп для лучшей артикуляции"
-                    ),
-                    75
-            ));
+        if (analysis.getClarityScore() < 70) {
+            recommendations.add(createClarityImprovementRecommendation());
         }
 
-        if (confidenceScore < 70) {
-            recommendations.add(new PersonalizedRecommendation(
-                    "confidence_building",
-                    "Развитие уверенности в речи",
-                    "Речь звучит неуверенно. Работайте над уверенностью и убедительностью.",
-                    "Средний",
-                    Arrays.asList(
-                            "Практикуйтесь в ситуациях низкого риска",
-                            "Используйте позитивные утверждения перед речью",
-                            "Работайте над языком тела и зрительным контактом"
-                    ),
-                    80
-            ));
+        if (analysis.getConfidenceScore() < 70) {
+            recommendations.add(createConfidenceBuildingRecommendation());
         }
 
         return recommendations;
     }
 
-    /**
-     * Генерация рекомендаций на основе анализа фонем
-     */
+    private PersonalizedRecommendation createVolumeImprovementRecommendation() {
+        return new PersonalizedRecommendation(
+                "volume_improvement",
+                "🔊 Улучшение громкости речи",
+                "Речь слишком тихая. Говорите громче и увереннее.",
+                "Средний",
+                Arrays.asList(
+                        "Тренируйтесь говорить перед зеркалом",
+                        "Используйте диктофон для контроля громкости",
+                        "Практикуйтесь в разных помещениях"
+                ),
+                70.0f
+        );
+    }
+
+    private PersonalizedRecommendation createClarityImprovementRecommendation() {
+        return new PersonalizedRecommendation(
+                "clarity_improvement",
+                "🗣️ Улучшение четкости речи",
+                "Артикуляция недостаточно четкая. Работайте над произношением окончаний.",
+                "Средний",
+                Arrays.asList(
+                        "Практикуйте артикуляционную гимнастику",
+                        "Четко произносите окончания слов",
+                        "Замедлите темп для лучшей артикуляции"
+                ),
+                75.0f
+        );
+    }
+
+    private PersonalizedRecommendation createConfidenceBuildingRecommendation() {
+        return new PersonalizedRecommendation(
+                "confidence_building",
+                "💪 Развитие уверенности в речи",
+                "Речь звучит неуверенно. Работайте над уверенностью и убедительностью.",
+                "Средний",
+                Arrays.asList(
+                        "Практикуйтесь в ситуациях низкого риска",
+                        "Используйте позитивные утверждения перед речью",
+                        "Работайте над языком тела и зрительным контактом"
+                ),
+                80.0f
+        );
+    }
+
     private List<PersonalizedRecommendation> generatePhonemeBasedRecommendations(EnhancedSpeechAnalysis analysis) {
         List<PersonalizedRecommendation> recommendations = new ArrayList<>();
 
-        if (!analysis.getPhonemeScores().isEmpty()) {
-            // Находим 3 самые слабые фонемы
-            List<Map.Entry<String, Float>> weakPhonemes = analysis.getPhonemeScores().entrySet().stream()
-                    .filter(e -> e.getValue() < 80)
-                    .sorted(Comparator.comparing(Map.Entry::getValue))
-                    .limit(3)
-                    .toList();
+        if (analysis.getPhonemeScores().isEmpty()) {
+            return recommendations;
+        }
 
-            if (!weakPhonemes.isEmpty()) {
-                StringBuilder phonemeList = new StringBuilder();
-                for (Map.Entry<String, Float> entry : weakPhonemes) {
-                    phonemeList.append("/").append(entry.getKey()).append("/ ");
-                }
+        List<Map.Entry<String, Float>> weakPhonemes = analysis.getPhonemeScores().entrySet().stream()
+                .filter(e -> e.getValue() < PHONEME_ATTENTION_THRESHOLD)
+                .sorted(Map.Entry.comparingByValue())
+                .limit(3)
+                .toList();
 
-                recommendations.add(new PersonalizedRecommendation(
-                        "weak_phonemes",
-                        "Работа над проблемными звуками",
-                        "Следующие звуки требуют особого внимания: " + phonemeList.toString(),
-                        "Высокий",
-                        generateTargetedPhonemeExercises(weakPhonemes),
-                        85
-                ));
-            }
+        if (!weakPhonemes.isEmpty()) {
+            recommendations.add(createWeakPhonemesRecommendation(weakPhonemes));
         }
 
         return recommendations;
     }
 
-    /**
-     * Генерация общих рекомендаций
-     */
+    private PersonalizedRecommendation createWeakPhonemesRecommendation(List<Map.Entry<String, Float>> weakPhonemes) {
+        String phonemeList = weakPhonemes.stream()
+                .map(entry -> "/" + entry.getKey() + "/")
+                .collect(Collectors.joining(" "));
+
+        return new PersonalizedRecommendation(
+                "weak_phonemes",
+                "🎯 Работа над проблемными звуками",
+                "Следующие звуки требуют особого внимания: " + phonemeList,
+                "Высокий",
+                generateTargetedPhonemeExercises(weakPhonemes),
+                85.0f
+        );
+    }
+
     private List<PersonalizedRecommendation> generateGeneralRecommendations(EnhancedSpeechAnalysis analysis) {
         List<PersonalizedRecommendation> recommendations = new ArrayList<>();
         float overallScore = (float) analysis.getOverallScore();
 
-        if (overallScore < 60) {
-            recommendations.add(new PersonalizedRecommendation(
+        recommendations.add(createMainRecommendation(overallScore));
+        recommendations.add(createConsistencyTipRecommendation());
+
+        return recommendations;
+    }
+
+    private PersonalizedRecommendation createMainRecommendation(float overallScore) {
+        if (overallScore < LOW_SCORE_THRESHOLD) {
+            return new PersonalizedRecommendation(
                     "foundation_building",
-                    "Построение фундамента",
+                    "🏗️ Построение фундамента",
                     "Нужно работать над базовыми аспектами речи. Регулярность - ключ к успеху.",
                     "Высокий",
                     Arrays.asList(
@@ -330,12 +439,12 @@ public class RecommendationEngine {
                             "Начните с простых упражнений и постепенно усложняйте",
                             "Ведите дневник прогресса"
                     ),
-                    95
-            ));
-        } else if (overallScore < 75) {
-            recommendations.add(new PersonalizedRecommendation(
+                    95.0f
+            );
+        } else if (overallScore < MEDIUM_SCORE_THRESHOLD) {
+            return new PersonalizedRecommendation(
                     "consistent_practice",
-                    "Последовательная практика",
+                    "📚 Последовательная практика",
                     "Хороший прогресс! Продолжайте регулярно практиковаться.",
                     "Средний",
                     Arrays.asList(
@@ -343,12 +452,12 @@ public class RecommendationEngine {
                             "Добавьте разнообразия в упражнения",
                             "Практикуйтесь в реальных ситуациях"
                     ),
-                    70
-            ));
-        } else if (overallScore < 90) {
-            recommendations.add(new PersonalizedRecommendation(
+                    70.0f
+            );
+        } else if (overallScore < EXCELLENT_SCORE_THRESHOLD) {
+            return new PersonalizedRecommendation(
                     "advanced_refinement",
-                    "Продвинутое оттачивание",
+                    "✨ Продвинутое оттачивание",
                     "Отличные результаты! Работайте над тонкими аспектами речи.",
                     "Низкий",
                     Arrays.asList(
@@ -356,12 +465,12 @@ public class RecommendationEngine {
                             "Практикуйтесь с носителями языка",
                             "Работайте над акцентом и естественностью"
                     ),
-                    60
-            ));
+                    60.0f
+            );
         } else {
-            recommendations.add(new PersonalizedRecommendation(
+            return new PersonalizedRecommendation(
                     "mastery_maintenance",
-                    "Поддержание мастерства",
+                    "🏆 Поддержание мастерства",
                     "Превосходный уровень! Поддерживайте навыки и продолжайте развиваться.",
                     "Низкий",
                     Arrays.asList(
@@ -369,46 +478,43 @@ public class RecommendationEngine {
                             "Обучайте других - лучший способ закрепить знания",
                             "Изучайте специализированную лексику"
                     ),
-                    50
-            ));
+                    50.0f
+            );
         }
-
-        // Рекомендация по регулярности
-        recommendations.add(new PersonalizedRecommendation(
-                "consistency_tip",
-                "Совет по регулярности",
-                "Регулярные короткие занятия эффективнее редких длинных.",
-                "Низкий",
-                Arrays.asList("Занимайтесь по 15-20 минут ежедневно"),
-                40
-        ));
-
-        return recommendations;
     }
 
-    /**
-     * Приоритизация рекомендаций
-     */
+    private PersonalizedRecommendation createConsistencyTipRecommendation() {
+        return new PersonalizedRecommendation(
+                "consistency_tip",
+                "⏰ Совет по регулярности",
+                "Регулярные короткие занятия эффективнее редких длинных.",
+                "Низкий",
+                Collections.singletonList("Занимайтесь по 15-20 минут ежедневно"),
+                40.0f
+        );
+    }
+
     private List<PersonalizedRecommendation> prioritizeRecommendations(
             List<PersonalizedRecommendation> recommendations,
             EnhancedSpeechAnalysis analysis) {
 
-        // Сортируем по приоритету и эффективности
         recommendations.sort((r1, r2) -> {
             int priorityCompare = getPriorityValue(r2.getPriority()) - getPriorityValue(r1.getPriority());
             if (priorityCompare != 0) return priorityCompare;
-
             return Float.compare(r2.getExpectedImprovement(), r1.getExpectedImprovement());
         });
 
-        // Ограничиваем количество рекомендаций
-        int maxRecommendations = 5;
-        if (analysis.getOverallScore() < 70) maxRecommendations = 7;
-        else if (analysis.getOverallScore() > 85) maxRecommendations = 3;
-
+        int maxRecommendations = calculateMaxRecommendations(analysis);
         return recommendations.stream()
                 .limit(maxRecommendations)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    private int calculateMaxRecommendations(EnhancedSpeechAnalysis analysis) {
+        float score = (float) analysis.getOverallScore();
+        if (score < 70) return MAX_RECOMMENDATIONS_LOW_SCORE;
+        if (score > 85) return MAX_RECOMMENDATIONS_HIGH_SCORE;
+        return MAX_RECOMMENDATIONS_DEFAULT;
     }
 
     private int getPriorityValue(String priority) {
@@ -420,69 +526,44 @@ public class RecommendationEngine {
         };
     }
 
-    /**
-     * Генерация упражнений для произношения
-     */
     private List<String> generatePronunciationExercises(EnhancedSpeechAnalysis analysis, int count) {
-        List<String> exercises = new ArrayList<>();
-
-        String[] baseExercises = {
-                "Повторяйте минимальные пары (ship/sheep, bad/bed)",
-                "Записывайте и сравнивайте свою речь с образцом",
-                "Практикуйте артикуляцию перед зеркалом",
-                "Читайте скороговорки, обращая внимание на проблемные звуки",
-                "Слушайте и повторяйте за носителями с замедлением"
-        };
-
-        for (int i = 0; i < Math.min(count, baseExercises.length); i++) {
-            exercises.add(baseExercises[i]);
-        }
-
-        return exercises;
+        List<String> exercises = new ArrayList<>(exerciseDatabase.getOrDefault("pronunciation", Collections.emptyList()));
+        return exercises.stream().limit(count).collect(Collectors.toList());
     }
 
-    /**
-     * Генерация упражнений для конкретной фонемы
-     */
     private List<String> generatePhonemeExercises(String phoneme) {
         List<String> exercises = new ArrayList<>();
         String tip = pronunciationTips.getOrDefault(phoneme,
                 "Практикуйте этот звук в разных позициях в слове.");
 
-        exercises.add("Техника для звука /" + phoneme + "/: " + tip);
-        exercises.add("Повторяйте слова с /" + phoneme + "/ в начале, середине и конце");
-        exercises.add("Используйте /" + phoneme + "/ в предложениях");
-        exercises.add("Записывайте себя и сравнивайте с эталоном");
+        exercises.add("📝 Техника для звука /" + phoneme + "/: " + tip);
+        exercises.add("🔄 Повторяйте слова с /" + phoneme + "/ в начале, середине и конце");
+        exercises.add("📖 Используйте /" + phoneme + "/ в предложениях");
+        exercises.add("🎙️ Записывайте себя и сравнивайте с эталоном");
 
         return exercises;
     }
 
-    /**
-     * Генерация целевых упражнений для фонем
-     */
     private List<String> generateTargetedPhonemeExercises(List<Map.Entry<String, Float>> weakPhonemes) {
         List<String> exercises = new ArrayList<>();
 
-        exercises.add("Сосредоточьтесь на следующих звуках:");
+        exercises.add("🎯 Сосредоточьтесь на следующих звуках:");
         for (Map.Entry<String, Float> entry : weakPhonemes) {
             String phoneme = entry.getKey();
-            exercises.add("  • /" + phoneme + "/: " +
+            exercises.add("   • /" + phoneme + "/: " +
                     pronunciationTips.getOrDefault(phoneme, "практикуйте отдельно"));
         }
 
-        exercises.add("Практикуйте эти звуки в контрастных парах");
-        exercises.add("Используйте их в спонтанной речи");
+        exercises.add("🔄 Практикуйте эти звуки в контрастных парах");
+        exercises.add("💬 Используйте их в спонтанной речи");
 
         return exercises;
     }
 
-    /**
-     * Создание запасной рекомендации при ошибке
-     */
     private PersonalizedRecommendation createFallbackRecommendation() {
         return new PersonalizedRecommendation(
                 "fallback",
-                "Общие рекомендации",
+                "📋 Общие рекомендации",
                 "Продолжайте регулярно практиковаться. Слушайте носителей и повторяйте за ними.",
                 "Средний",
                 Arrays.asList(
@@ -490,63 +571,74 @@ public class RecommendationEngine {
                         "Слушайте подкасты на английском",
                         "Практикуйтесь с разговорными партнерами"
                 ),
-                50
+                50.0f
         );
     }
 
-    /**
-     * Генерация плана обучения на неделю
-     */
-    public WeeklyLearningPlan generateWeeklyPlan(EnhancedSpeechAnalysis analysis) {
+    private WeeklyLearningPlan createEmptyPlan() {
         WeeklyLearningPlan plan = new WeeklyLearningPlan();
-        plan.setTargetLevel(analysis.getProficiencyLevel());
-        plan.setExpectedImprovement((float) (100 - analysis.getOverallScore()) * 0.3f);
+        plan.setTargetLevel("Не определен");
+        plan.setExpectedImprovement(0.0f);
+        plan.setWeeklyGoal("Нет данных для анализа");
+        plan.setSchedule(Collections.emptyList());
+        return plan;
+    }
 
+    private float calculateExpectedImprovement(EnhancedSpeechAnalysis analysis) {
+        return (float) (100 - analysis.getOverallScore()) * 0.3f;
+    }
+
+    private String formatWeeklyGoal(float improvement) {
+        return String.format("Улучшить общую оценку на %.1f пунктов", improvement);
+    }
+
+    private List<DailySchedule> createWeeklySchedule(EnhancedSpeechAnalysis analysis) {
         List<DailySchedule> schedule = new ArrayList<>();
         String[] days = {"Понедельник", "Вторник", "Среда", "Четверг", "Пятница", "Суббота", "Воскресенье"};
 
         List<PersonalizedRecommendation> recommendations = generateRecommendations(analysis);
 
-        for (int i = 0; i < 7; i++) {
-            DailySchedule daySchedule = new DailySchedule();
-            daySchedule.setDay(days[i]);
-            daySchedule.setFocus(getDailyFocus(i, recommendations));
-            daySchedule.setExercises(getDailyExercises(i, recommendations));
-            daySchedule.setDurationMinutes(getDailyDuration(analysis, i));
-            daySchedule.setTips(getDailyTips(i));
-
-            schedule.add(daySchedule);
+        for (int i = 0; i < days.length; i++) {
+            schedule.add(createDailySchedule(i, days[i], recommendations, analysis));
         }
 
-        plan.setSchedule(schedule);
-        plan.setWeeklyGoal("Улучшить общую оценку на " +
-                String.format("%.1f", plan.getExpectedImprovement()) + " пунктов");
+        return schedule;
+    }
 
-        logger.info("Сгенерирован недельный план обучения");
-        return plan;
+    private DailySchedule createDailySchedule(int index, String day,
+                                              List<PersonalizedRecommendation> recommendations,
+                                              EnhancedSpeechAnalysis analysis) {
+        DailySchedule schedule = new DailySchedule();
+        schedule.setDay(day);
+        schedule.setFocus(getDailyFocus(index, recommendations));
+        schedule.setExercises(getDailyExercises(index, recommendations));
+        schedule.setDurationMinutes(getDailyDuration(analysis, index));
+        schedule.setTips(getDailyTips(index));
+        return schedule;
     }
 
     private String getDailyFocus(int dayIndex, List<PersonalizedRecommendation> recommendations) {
-        String[] focuses = {"Произношение", "Беглость", "Интонация", "Громкость и четкость",
-                "Уверенность", "Комплексная практика", "Повторение и закрепление"};
+        String[] focuses = {
+                "🔊 Произношение", "⚡ Беглость", "🎵 Интонация",
+                "🔊 Громкость и четкость", "💪 Уверенность",
+                "🔄 Комплексная практика", "📚 Повторение и закрепление"
+        };
 
         if (dayIndex < focuses.length) {
             return focuses[dayIndex];
         }
 
-        // Используем рекомендации для фокуса
         if (!recommendations.isEmpty()) {
             int recIndex = dayIndex % recommendations.size();
             return recommendations.get(recIndex).getTitle();
         }
 
-        return "Общая практика";
+        return "📝 Общая практика";
     }
 
     private List<String> getDailyExercises(int dayIndex, List<PersonalizedRecommendation> recommendations) {
         List<String> exercises = new ArrayList<>();
 
-        // Базовые упражнения для каждого дня
         String[][] dailyExercises = {
                 {"Артикуляционная гимнастика", "Практика проблемных звуков", "Скороговорки"},
                 {"Чтение вслух", "Пересказ текстов", "Упражнения на связность"},
@@ -561,7 +653,6 @@ public class RecommendationEngine {
             exercises.addAll(Arrays.asList(dailyExercises[dayIndex]));
         }
 
-        // Добавляем рекомендации
         if (!recommendations.isEmpty() && dayIndex < recommendations.size()) {
             exercises.addAll(recommendations.get(dayIndex).getExercises());
         }
@@ -571,11 +662,10 @@ public class RecommendationEngine {
 
     private int getDailyDuration(EnhancedSpeechAnalysis analysis, int dayIndex) {
         float score = (float) analysis.getOverallScore();
-
-        if (score < 60) return 30; // Новичкам больше времени
+        if (score < 60) return 30;
         if (score < 75) return 25;
         if (score < 85) return 20;
-        return 15; // Продвинутым меньше, но регулярно
+        return 15;
     }
 
     private List<String> getDailyTips(int dayIndex) {
@@ -589,19 +679,14 @@ public class RecommendationEngine {
                 "Отмечайте свой прогресс"
         };
 
-        if (dayIndex < tips.length) {
-            return Collections.singletonList(tips[dayIndex]);
-        }
-
-        return Collections.singletonList("Регулярность важнее продолжительности");
+        return dayIndex < tips.length
+                ? Collections.singletonList(tips[dayIndex])
+                : Collections.singletonList("Регулярность важнее продолжительности");
     }
-
-    // ====================== ИНИЦИАЛИЗАЦИЯ БАЗЫ ЗНАНИЙ ======================
 
     private Map<String, List<RecommendationRule>> initializeRecommendationRules() {
         Map<String, List<RecommendationRule>> rules = new HashMap<>();
 
-        // Правила для произношения
         rules.put("pronunciation", Arrays.asList(
                 new RecommendationRule(0, 60, "Критическое улучшение произношения"),
                 new RecommendationRule(60, 75, "Улучшение произношения"),
@@ -609,7 +694,6 @@ public class RecommendationEngine {
                 new RecommendationRule(85, 100, "Поддержание произношения")
         ));
 
-        // Правила для беглости
         rules.put("fluency", Arrays.asList(
                 new RecommendationRule(0, 65, "Критическое улучшение беглости"),
                 new RecommendationRule(65, 80, "Улучшение беглости"),
@@ -617,7 +701,6 @@ public class RecommendationEngine {
                 new RecommendationRule(90, 100, "Естественная беглость")
         ));
 
-        // Правила для интонации
         rules.put("intonation", Arrays.asList(
                 new RecommendationRule(0, 70, "Освоение базовой интонации"),
                 new RecommendationRule(70, 85, "Развитие интонации"),
@@ -640,10 +723,6 @@ public class RecommendationEngine {
         tips.put("ʃ", "Шипящий звук, язык поднят к нёбу. Слово: 'she'.");
         tips.put("w", "Губы округлены и выдвинуты вперед. Слово: 'we'.");
         tips.put("v", "Нижняя губа касается верхних зубов. Слово: 'very'.");
-        tips.put("p", "Сильный взрывной звук. Слово: 'pen'.");
-        tips.put("b", "Как /p/, но с голосом. Слово: 'big'.");
-        tips.put("t", "Кончик языка у альвеол. Слово: 'tea'.");
-        tips.put("d", "Как /t/, но с голосом. Слово: 'day'.");
 
         return tips;
     }
@@ -686,18 +765,13 @@ public class RecommendationEngine {
         return exercises;
     }
 
-    // ====================== ВСПОМОГАТЕЛЬНЫЕ КЛАССЫ ======================
-
-    /**
-     * Персонализированная рекомендация
-     */
     public static class PersonalizedRecommendation {
         private final String id;
         private final String title;
         private final String description;
-        private final String priority; // Высокий, Средний, Низкий
+        private final String priority;
         private final List<String> exercises;
-        private final float expectedImprovement; // Ожидаемое улучшение в %
+        private final float expectedImprovement;
 
         public PersonalizedRecommendation(String id, String title, String description,
                                           String priority, List<String> exercises,
@@ -706,7 +780,7 @@ public class RecommendationEngine {
             this.title = title;
             this.description = description;
             this.priority = priority;
-            this.exercises = exercises;
+            this.exercises = new ArrayList<>(exercises);
             this.expectedImprovement = expectedImprovement;
         }
 
@@ -714,19 +788,16 @@ public class RecommendationEngine {
         public String getTitle() { return title; }
         public String getDescription() { return description; }
         public String getPriority() { return priority; }
-        public List<String> getExercises() { return exercises; }
+        public List<String> getExercises() { return Collections.unmodifiableList(exercises); }
         public float getExpectedImprovement() { return expectedImprovement; }
 
         @Override
         public String toString() {
-            return String.format("[%s] %s: %s (Приоритет: %s)",
-                    id, title, description, priority);
+            return String.format("[%s] %s: %s (Приоритет: %s, Улучшение: %.1f%%)",
+                    id, title, description, priority, expectedImprovement);
         }
     }
 
-    /**
-     * Правило рекомендации
-     */
     private static class RecommendationRule {
         private final float minScore;
         private final float maxScore;
@@ -742,60 +813,48 @@ public class RecommendationEngine {
             return score >= minScore && score < maxScore;
         }
 
-        public String getRecommendation() {
-            return recommendation;
-        }
+        public String getRecommendation() { return recommendation; }
     }
 
-    /**
-     * Недельный план обучения
-     */
     public static class WeeklyLearningPlan {
         private String targetLevel;
         private float expectedImprovement;
         private List<DailySchedule> schedule;
         private String weeklyGoal;
 
-        // Getters and Setters
         public String getTargetLevel() { return targetLevel; }
         public void setTargetLevel(String targetLevel) { this.targetLevel = targetLevel; }
 
         public float getExpectedImprovement() { return expectedImprovement; }
         public void setExpectedImprovement(float expectedImprovement) { this.expectedImprovement = expectedImprovement; }
 
-        public List<DailySchedule> getSchedule() { return schedule; }
-        public void setSchedule(List<DailySchedule> schedule) { this.schedule = schedule; }
+        public List<DailySchedule> getSchedule() { return schedule != null ? Collections.unmodifiableList(schedule) : Collections.emptyList(); }
+        public void setSchedule(List<DailySchedule> schedule) { this.schedule = new ArrayList<>(schedule); }
 
         public String getWeeklyGoal() { return weeklyGoal; }
         public void setWeeklyGoal(String weeklyGoal) { this.weeklyGoal = weeklyGoal; }
 
         public String getPlanSummary() {
-            StringBuilder summary = new StringBuilder();
-            summary.append("НЕДЕЛЬНЫЙ ПЛАН ОБУЧЕНИЯ\n");
-            summary.append("=====================\n\n");
-            summary.append("Целевой уровень: ").append(targetLevel).append("\n");
-            summary.append("Ожидаемое улучшение: ").append(String.format("%.1f", expectedImprovement)).append(" пунктов\n");
-            summary.append("Цель недели: ").append(weeklyGoal).append("\n\n");
+            if (schedule == null || schedule.isEmpty()) {
+                return "План не сгенерирован";
+            }
 
-            summary.append("РАСПИСАНИЕ:\n");
+            StringBuilder summary = new StringBuilder();
+            summary.append("📅 НЕДЕЛЬНЫЙ ПЛАН ОБУЧЕНИЯ\n");
+            summary.append("========================\n\n");
+            summary.append("🎯 Целевой уровень: ").append(targetLevel).append("\n");
+            summary.append("📊 Ожидаемое улучшение: ").append(String.format("%.1f", expectedImprovement)).append(" пунктов\n");
+            summary.append("⭐ Цель недели: ").append(weeklyGoal).append("\n\n");
+
+            summary.append("📋 РАСПИСАНИЕ:\n");
             for (DailySchedule day : schedule) {
-                summary.append(day.getDay()).append(":\n");
-                summary.append("  Фокус: ").append(day.getFocus()).append("\n");
-                summary.append("  Длительность: ").append(day.getDurationMinutes()).append(" мин\n");
-                summary.append("  Упражнения: ").append(String.join(", ", day.getExercises())).append("\n");
-                if (!day.getTips().isEmpty()) {
-                    summary.append("  Совет: ").append(day.getTips().get(0)).append("\n");
-                }
-                summary.append("\n");
+                summary.append("\n").append(day.getSummary());
             }
 
             return summary.toString();
         }
     }
 
-    /**
-     * Расписание на день
-     */
     public static class DailySchedule {
         private String day;
         private String focus;
@@ -803,68 +862,36 @@ public class RecommendationEngine {
         private int durationMinutes;
         private List<String> tips;
 
-        // Getters and Setters
         public String getDay() { return day; }
         public void setDay(String day) { this.day = day; }
 
         public String getFocus() { return focus; }
         public void setFocus(String focus) { this.focus = focus; }
 
-        public List<String> getExercises() { return exercises; }
-        public void setExercises(List<String> exercises) { this.exercises = exercises; }
+        public List<String> getExercises() { return exercises != null ? Collections.unmodifiableList(exercises) : Collections.emptyList(); }
+        public void setExercises(List<String> exercises) { this.exercises = new ArrayList<>(exercises); }
 
         public int getDurationMinutes() { return durationMinutes; }
         public void setDurationMinutes(int durationMinutes) { this.durationMinutes = durationMinutes; }
 
-        public List<String> getTips() { return tips; }
-        public void setTips(List<String> tips) { this.tips = tips; }
-    }
+        public List<String> getTips() { return tips != null ? Collections.unmodifiableList(tips) : Collections.emptyList(); }
+        public void setTips(List<String> tips) { this.tips = new ArrayList<>(tips); }
 
-    /**
-     * Тестирование движка рекомендаций
-     */
-    public static void main(String[] args) {
-        RecommendationEngine engine = new RecommendationEngine();
-
-        // Создаем тестовый анализ
-        EnhancedSpeechAnalysis testAnalysis = new EnhancedSpeechAnalysis();
-        testAnalysis.setPronunciationScore(65.0f);
-        testAnalysis.setFluencyScore(70.0f);
-        testAnalysis.setIntonationScore(60.0f);
-        testAnalysis.setVolumeScore(75.0f);
-        testAnalysis.setClarityScore(68.0f);
-        testAnalysis.setConfidenceScore(62.0f);
-        testAnalysis.setSpeakingRate(140.0f);
-        testAnalysis.setPauseCount(25);
-        testAnalysis.setOverallScore(67.0f);
-        testAnalysis.setProficiencyLevel("Начинающий");
-
-        // Добавляем демо-фонемы
-        testAnalysis.addPhonemeScore("θ", 55.0f);
-        testAnalysis.addPhonemeScore("r", 65.0f);
-        testAnalysis.addPhonemeScore("æ", 70.0f);
-
-        // Добавляем ошибки
-        testAnalysis.addDetectedError("Замена 'th' на 's'");
-        testAnalysis.addDetectedError("Много пауз-заполнителей");
-
-        // Генерация рекомендаций
-        List<PersonalizedRecommendation> recommendations = engine.generateRecommendations(testAnalysis);
-
-        System.out.println("=== ПЕРСОНАЛИЗИРОВАННЫЕ РЕКОМЕНДАЦИИ ===");
-        for (PersonalizedRecommendation rec : recommendations) {
-            System.out.println("\n" + rec.getTitle());
-            System.out.println("Приоритет: " + rec.getPriority());
-            System.out.println("Описание: " + rec.getDescription());
-            System.out.println("Упражнения:");
-            for (String exercise : rec.getExercises()) {
-                System.out.println("  • " + exercise);
+        public String getSummary() {
+            StringBuilder sb = new StringBuilder();
+            sb.append("  ").append(day).append(":\n");
+            sb.append("    🎯 Фокус: ").append(focus).append("\n");
+            sb.append("    ⏱️ Длительность: ").append(durationMinutes).append(" мин\n");
+            sb.append("    📝 Упражнения:\n");
+            if (exercises != null) {
+                for (String ex : exercises) {
+                    sb.append("      • ").append(ex).append("\n");
+                }
             }
+            if (tips != null && !tips.isEmpty()) {
+                sb.append("    💡 Совет: ").append(tips.get(0)).append("\n");
+            }
+            return sb.toString();
         }
-
-        // Генерация недельного плана
-        WeeklyLearningPlan weeklyPlan = engine.generateWeeklyPlan(testAnalysis);
-        System.out.println("\n\n=== НЕДЕЛЬНЫЙ ПЛАН ОБУЧЕНИЯ ===");
-        System.out.println(weeklyPlan.getPlanSummary());
     }
 }
